<resources>
    <string name="app_name">FakeWN</string>
    <string name="button_begin">Begin</string>
    <string name="time">2019.08.13</string>
    <string name="score">30</string>
    <string name="title11">文章时长</string>
    <string name="title12">视听学习</string>
    <string name="title13">视听学习时长</string>
    <string name="title14">阅读文章</string>
    <string name="title15">收藏</string>
    <string name="title16">分享</string>
    <string name="title21">每日答题</string>
    <string name="time1">今日</string>
    <string name="time2">08.12</string>
    <string name="time3">08.11</string>
    <string name="time4">08.10</string>
    <string name="time5">08.09</string>
    <string name="time6">08.08</string>
    <string name="time7">08.07</string>
    <string name="time8">08.06</string>
    <string name="clock">00:00</string>
    <string name="score1">30分</string>
    <string name="jf">"                  积分明细"</string>
</resources>
