<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScreenShot">

    <ImageView
        android:id="@+id/当日积分"
        android:layout_width="84dp"
        android:layout_height="25dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/Time"
        app:layout_constraintEnd_toStartOf="@+id/Score"
        app:srcCompat="@drawable/qg3" />

    <TextView
        android:id="@+id/Score"
        android:layout_width="41dp"
        android:layout_height="34dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="2dp"
        android:text="@string/score"
        android:textAlignment="center"
        android:textColor="#E32416"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/当日积分"
        app:layout_constraintEnd_toStartOf="@+id/Time" />

    <TextView
        android:id="@+id/Time"
        android:layout_width="87dp"
        android:layout_height="22dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="329dp"
        android:text="@string/time"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:id="@+id/progress"
        android:layout_width="38.5dp"
        android:layout_height="98dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="34.8dp"
        android:transformPivotY="98dp"
        app:layout_constraintBottom_toTopOf="@+id/Time"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/qg2" />

    <ImageView
        android:id="@+id/progress1"
        android:layout_width="38.5dp"
        android:layout_height="98dp"
        android:layout_marginEnd="16.5dp"
        android:transformPivotY="98dp"
        app:layout_constraintBottom_toBottomOf="@+id/progress"
        app:layout_constraintEnd_toStartOf="@+id/progress"
        app:srcCompat="@drawable/qg1" />

    <ImageView
        android:id="@+id/progress2"
        android:layout_width="38.5dp"
        android:layout_height="98dp"
        android:layout_marginEnd="16.5dp"
        android:transformPivotY="98dp"
        app:layout_constraintBottom_toBottomOf="@+id/progress1"
        app:layout_constraintEnd_toStartOf="@+id/progress1"
        app:srcCompat="@drawable/qg1" />

    <ImageView
        android:id="@+id/progress3"
        android:layout_width="38.5dp"
        android:layout_height="98dp"
        android:layout_marginEnd="16.5dp"
        android:transformPivotY="98dp"
        app:layout_constraintBottom_toBottomOf="@+id/progress2"
        app:layout_constraintEnd_toStartOf="@+id/progress2"
        app:srcCompat="@drawable/qg1" />

    <ImageView
        android:id="@+id/progress4"
        android:layout_width="38.5dp"
        android:layout_height="98dp"
        android:layout_marginEnd="16.5dp"
        android:transformPivotY="98dp"
        app:layout_constraintBottom_toBottomOf="@+id/progress3"
        app:layout_constraintEnd_toStartOf="@+id/progress3"
        app:srcCompat="@drawable/qg1" />

    <ImageView
        android:id="@+id/progress5"
        android:layout_width="38.5dp"
        android:layout_height="98dp"
        android:layout_marginEnd="16.5dp"
        android:transformPivotY="98dp"
        app:layout_constraintBottom_toBottomOf="@+id/progress4"
        app:layout_constraintEnd_toStartOf="@+id/progress4"
        app:srcCompat="@drawable/qg1" />

    <ImageView
        android:id="@+id/progress6"
        android:layout_width="38.5dp"
        android:layout_height="98dp"
        android:layout_marginEnd="16.5dp"
        android:transformPivotY="98dp"
        app:layout_constraintBottom_toBottomOf="@+id/progress5"
        app:layout_constraintEnd_toStartOf="@+id/progress5"
        app:srcCompat="@drawable/qg1" />

    <ImageView
        android:id="@+id/progress7"
        android:layout_width="38.5dp"
        android:layout_height="98dp"
        android:layout_marginEnd="16.5dp"
        android:transformPivotY="98dp"
        app:layout_constraintBottom_toBottomOf="@+id/progress6"
        app:layout_constraintEnd_toStartOf="@+id/progress6"
        app:srcCompat="@drawable/qg1" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="132dp"
        android:text="@string/time1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/progress"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/date1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="134dp"
        android:text="@string/time2"
        app:layout_constraintBottom_toTopOf="@+id/progress1"
        app:layout_constraintEnd_toStartOf="@+id/date" />

    <TextView
        android:id="@+id/date2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="134dp"
        android:text="@string/time3"
        app:layout_constraintBottom_toTopOf="@+id/progress2"
        app:layout_constraintEnd_toStartOf="@+id/date1" />

    <TextView
        android:id="@+id/date3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="134dp"
        android:text="@string/time4"
        app:layout_constraintBottom_toTopOf="@+id/progress3"
        app:layout_constraintEnd_toStartOf="@+id/date2" />

    <TextView
        android:id="@+id/date4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="134dp"
        android:text="@string/time5"
        app:layout_constraintBottom_toTopOf="@+id/progress4"
        app:layout_constraintEnd_toStartOf="@+id/date3" />

    <TextView
        android:id="@+id/date5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="134dp"
        android:text="@string/time6"
        app:layout_constraintBottom_toTopOf="@+id/progress5"
        app:layout_constraintEnd_toStartOf="@+id/date4" />

    <TextView
        android:id="@+id/date6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="134dp"
        android:text="@string/time7"
        app:layout_constraintBottom_toTopOf="@+id/progress6"
        app:layout_constraintEnd_toStartOf="@+id/date5" />

    <TextView
        android:id="@+id/date7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="134dp"
        android:text="@string/time8"
        app:layout_constraintBottom_toTopOf="@+id/progress7"
        app:layout_constraintEnd_toStartOf="@+id/date6" />

    <ImageView
        android:id="@+id/circle"
        android:layout_width="32dp"
        android:layout_height="255dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/当日积分"
        app:srcCompat="@drawable/qg4" />

    <ImageView
        android:id="@+id/plus"
        android:layout_width="67dp"
        android:layout_height="269dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Time"
        app:srcCompat="@drawable/qg5" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="121dp"
        android:layout_height="31dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="180dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title11"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintTop_toBottomOf="@+id/当日积分" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="121dp"
        android:layout_height="31dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="180dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title12"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <TextView
        android:id="@+id/title3"
        android:layout_width="121dp"
        android:layout_height="31dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="180dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title13"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintTop_toBottomOf="@+id/title2" />

    <TextView
        android:id="@+id/title4"
        android:layout_width="121dp"
        android:layout_height="31dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="180dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title14"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintTop_toBottomOf="@+id/title3" />

    <TextView
        android:id="@+id/clock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/clock"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/title1"
        app:layout_constraintStart_toStartOf="@+id/title1" />

    <TextView
        android:id="@+id/clock2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/clock"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/title2"
        app:layout_constraintStart_toStartOf="@+id/title2" />

    <TextView
        android:id="@+id/clock3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/clock"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/title3"
        app:layout_constraintStart_toStartOf="@+id/title3" />

    <TextView
        android:id="@+id/clock4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/clock"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/title4"
        app:layout_constraintStart_toStartOf="@+id/title4" />

</android.support.constraint.ConstraintLayout>